aconfmgr/files/etc/ufw/user.rules
*filter
:ufw-user-input - [0:0]
:ufw-user-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-logging-deny - [0:0]
:ufw-logging-allow - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow any any 0.0.0.0/0 any 192.168.0.0/24 in
-A ufw-user-input -s 192.168.0.0/24 -j ACCEPT

### tuple ### allow tcp 22000 0.0.0.0/0 any 0.0.0.0/0 syncthing - in
-A ufw-user-input -p tcp --dport 22000 -j ACCEPT -m comment --comment 'dapp_syncthing'

### tuple ### allow udp 21027 0.0.0.0/0 any 0.0.0.0/0 syncthing - in
-A ufw-user-input -p udp --dport 21027 -j ACCEPT -m comment --comment 'dapp_syncthing'

### tuple ### route:allow any any 0.0.0.0/0 any 0.0.0.0/0 in_wg0!out_eth0
-A ufw-user-forward -i wg0 -o eth0 -j ACCEPT

### tuple ### route:allow any any 0.0.0.0/0 any 0.0.0.0/0 in_eth0!out_wg0
-A ufw-user-forward -i eth0 -o wg0 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT
-A ufw-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
